fix: window size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ a:hover {
   color: #535bf2;
 }
 
+:root {
+  --vh: 1vh;
+}
+
 html, body, #root {
   height: 100%;
   width: 100%;
@@ -33,7 +37,7 @@ body {
   align-items: stretch;
   justify-content: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 h1 {
